enable Java 17 preview features for switch pattern matching